show items sale for users

--- a/BanHang/Views/Menu/_MenuArrivals.cshtml
+++ b/BanHang/Views/Menu/_MenuArrivals.cshtml
@@ -1,29 +1,10 @@
-﻿@model IEnumerable<BanHang.Models.EF.ProductCategories>
-
+﻿@model IEnumerable<BanHang.Models.EF.Product>
 @if (Model != null && Model.Any())
 {
     <div class="row">
         <div class="col text-center">
             <div class="section_title new_arrivals_title">
-                <h2>New Arrivals</h2>
-            </div>
-        </div>
-    </div>
-    <div class="row align-items-center">
-        <div class="col text-center">
-            <div class="new_arrivals_sorting">
-                <ul class="arrivals_grid_sorting clearfix button-group filters-button-group">
-
-                    <li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center active is-checked" data-filter="*">all</li>
-                    @foreach (var item in Model)
-                    {
-                        <li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".@item.Alias", data-id="@item.Id">@item.Tiltle</li>
-                    }
-
-                    @*<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".women">women's</li>
-                        <li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".accessories">accessories</li>
-                        <li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".men">men's</li>*@
-                </ul>
+                <h2>Sản phẩm giảm giá</h2>
             </div>
         </div>
     </div>
@@ -32,7 +13,38 @@
             <div class="product-grid" data-isotope='{ "itemSelector": ".product-item", "layoutMode": "fitRows" }'>
                 @foreach (var item in Model)
                 {
-                    @Html.Action("Partial_ItemsByCateId", "Products", new { id = @item.Id })
+                    var strImge = "";
+                    var img = item.ProductImage.FirstOrDefault(x => x.IsDefault);
+                    if (img != null)
+                    {
+                        strImge = img.Image;
+                    }
+                    <div class="product-item @ViewBag.ProductCategoryAlias">
+                        <div class="product discount product_filter">
+                            <div class="product_image">
+                                <img src="@strImge" width="180" height="150" alt="@item.Title">
+                            </div>
+                            <div class="favorite favorite_left"></div>
+                            @if (item.PriceSale > 0)
+                            {
+                                <div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
+                            }
+                            @* <div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>*@
+                            <div class="product_info">
+                                <h6 class="product_name"><a href="/chi-tiet/@item.Alias-p@(item.Id)">@item.Title</a></h6>
+                                @if (item.PriceSale > 0)
+                                {
+                                    <div class="product_price">@BanHang.Common.Common.FormatNumber(item.PriceSale, 0)<span>@BanHang.Common.Common.FormatNumber(item.Price, 0)</span></div>
+
+                                }
+                                else
+                                {
+                                    <div class="product_price">@BanHang.Common.Common.FormatNumber(item.Price, 0)</div>
+                                }
+                            </div>
+                        </div>
+                        <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">Chi tiết</a></div>
+                    </div>
                 }
 
             </div>
