--- a/BanHang/Views/Home/Index.cshtml
+++ b/BanHang/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <!-- Slider -->
 
-<div class="main_slider" style="background-image:url(/Content/assets/images/slider.jpg)">
+<div class="main_slider" style="margin-top:5px;background-image:url(/Content/assets/images/slider.jpg);">
     <div class="container fill_height">
         <div class="row align-items-center fill_height">
             <div class="col">
