--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
                 <!-- Top Navigation -->
 
-                <div class="top_nav">
+                @*<div class="top_nav">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
@@ -47,31 +47,61 @@
                                 <div class="top_nav_right">
 
 
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>*@
+
+                <!--<!-- Main Navigation -->
+                <div class="main_nav_container">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="logo_container">
+                                    <a href="/">chợ<span style="color: forestgreen;">online</span></a>
+                                </div>
+                                <nav class="navbar">
+                                    @Html.Action("menutop", "menu")
+                                    @*<ul class="navbar_user">
+            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+            <li class="checkout">
+                <a href="#">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    <span id="checkout_items" class="checkout_items">2</span>
+                </a>
+            </li>
+        </ul>*@
+                                    <div class="hamburger_container">
+                                        <i class="fa fa-bars" aria-hidden="true"></i>
+                                    </div>
                                     <ul class="top_nav_menu">
                                         @*@if (!Request.IsAuthenticated)
-                                            {
-                                                Session.Abandon();
-                                                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
+            {
+                Session.Abandon();
+                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
 
-                                            }
-                                            else
-                                            {
-                                                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />
+            }
+            else
+            {
+                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />
 
-                                            }*@
+            }*@
 
 
 
                                         <!-- Currency / Language / My Account -->
 
 
-                                        <li class="account">
+                                        <li class="account" style="background: #FFFFFF;">
 
                                             @if (!Request.IsAuthenticated)
                                             {
 
                                                 Session.Abandon();
-                                                <a href="#">
+                                                <a href="#" style="color:black">
                                                     <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
 
                                                     tài khoản
@@ -79,10 +109,10 @@
                                                     <i class="fa fa-angle-down"></i>
                                                 </a>
                                                 @*<ul class="navbar_user">
-                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 
-            </ul>*@
+                    </ul>*@
                                                 <ul class="account_selection ">
                                                     <li><a style="font-size: 10px;" href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>đăng nhập</a></li>
                                                     <li><a style="font-size: 10px;" href="@Url.Action("Register","Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>đăng ký</a></li>
@@ -123,7 +153,7 @@
                                                 else
                                                 {
                                                     <a href="#">
-                                                         <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@ava.Value" class="round-image" />
+                                                        <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@ava.Value" class="round-image" />
                                                         @User.Identity.Name
                                                         <i class="fa fa-angle-down"></i>
 
@@ -145,35 +175,6 @@
                                         </li>
 
                                     </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!--<!-- Main Navigation -->
-                <div class="main_nav_container">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 text-right">
-                                <div class="logo_container">
-                                    <a href="/">chợ<span style="color: forestgreen;">online</span></a>
-                                </div>
-                                <nav class="navbar">
-                                    @Html.Action("menutop", "menu")
-                                    @*<ul class="navbar_user">
-                                            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                                            <li class="checkout">
-                                                <a href="#">
-                                                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                                    <span id="checkout_items" class="checkout_items">2</span>
-                                                </a>
-                                            </li>
-                                        </ul>*@
-                                    <div class="hamburger_container">
-                                        <i class="fa fa-bars" aria-hidden="true"></i>
-                                    </div>
                                 </nav>
                             </div>
                         </div>
