--- a/BanHang/Areas/Admin/Views/Products/Add.cshtml
+++ b/BanHang/Areas/Admin/Views/Products/Add.cshtml
@@ -102,7 +102,7 @@
                                         <div class="col-4">
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Giá</label>
-                                                <input type="text" name="demoPrice" value="0" id="demoPrice" class="form-control auto" data-a-dec="," data-a-sep="." />
+                                                <input type="text" name="demoPrice" value="0" id="demoPrice" class="form-control auto"  data-a-sep="." />
                                                 @Html.HiddenFor(x => x.Price, new { @class = "", @placeholder = "Giá" })
                                                 @Html.ValidationMessageFor(x => x.Price, null, new { @class = "text-danger" })
                                             </div>
