--- a/BanHang/Views/Profile/Index.cshtml
+++ b/BanHang/Views/Profile/Index.cshtml
@@ -8,30 +8,57 @@
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
 
 
+<style>
+    .user-container {
+        border: 1px solid #ccc;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        width:1200px;
+    }
 
+    .user-details {
+        display: inline-block;
+        margin-right: 200px;
+        vertical-align: top;
+    }
+
+    .round-image {
+        width: 168px;
+        height: 168px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    .user_details_title {
+        right: 170px;
+    }
+
+    .edit-button {
+        position: relative;
+        left: 200px;
+        bottom: 50px;
+    }
+</style> 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal" style="margin-top:160px; margin-left:400px">
-    <h4>Thông tin người dùng</h4>
-    <div style="display:inline-block;margin-right: 200px">
-
-        <img style=" width: 168px; height: 168px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />
-
-    </div>
-    <div style="display: inline-block; top: 15px; right: 170px" class="user_details">
-        <div class="user_details_title" >
-
+    <div class="user-container">
+        <h4>Thông tin người dùng</h4>
+        <div class="user-details">
+            <img src="@Model.Ava" class="round-image" alt="Avatar" />
+        </div>
+        <div class="user-details user_details_title">
             <h4>Tên: @Model.FullName</h4>
             <h4>Email: @Model.Email</h4>
             <h4>Sdt: @Model.Phone</h4>
         </div>
+        <div class="edit-button">
+            <a href="~/Profile/Edit/@Model.Id" class="btn btn-sm btn-primary">sửa</a>
+        </div>
     </div>
-    <div style="left:200px;bottom:50px">
-        <a href="~/Profile/Edit/@Model.Id" class="btn btn-sm btn-primary">sửa</a>
-    </div>
-   
     @if (Model.Role == "Shipper")
     {
         @Html.Action("Ship", "Profile")
