--- a/BanHang/Areas/Admin/Views/Home/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Home/Index.cshtml
@@ -39,12 +39,9 @@
             </div>
         </div>
         <div class="card-body">
-            Start creating your amazing application!
+            Admin
         </div>
         <!-- /.card-body -->
-        <div class="card-footer">
-            Footer
-        </div>
         <!-- /.card-footer-->
     </div>
     <!-- /.card -->
