--- a/BanHang/Views/Menu/_MenuArrivals.cshtml
+++ b/BanHang/Views/Menu/_MenuArrivals.cshtml
@@ -1,4 +1,11 @@
 ﻿@model IEnumerable<BanHang.Models.EF.Product>
+    <style>
+        .product {
+            width: 100%;
+            height: 250px;
+            border: solid 5px #e9e9e9;
+        }
+    </style>
 @if (Model != null && Model.Any())
 {
     <div class="row">
@@ -19,7 +26,7 @@
                     {
                         strImge = img.Image;
                     }
-                    <div class="product-item @ViewBag.ProductCategoryAlias">
+                    <div class="product-item @ViewBag.ProductCategoryAlias" style="height:300px;">
                         <div class="product discount product_filter">
                             <div class="product_image">
                                 <img src="@strImge" width="180" height="150" alt="@item.Title">
