--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -187,13 +187,17 @@
 @section scripts{
     <script src="~/Content/assets/js/categories_custom.js"></script>
     <script>
+        $(document).ready(function () {
+            initPriceSlider();
+            initIsotopeFiltering();
+        });
         function initPriceSlider() {
             $("#slider-range").slider(
                 {
                     range: true,
                     min: 0,
                     max: 1000000,
-                    values: [0, 500000],
+                    values: [0, 1000000],
                     slide: function (event, ui) {
                         $("#amount").val("đ" + ui.values[0] + " - đ" + ui.values[1]);
                         $('#FromAmount').val(ui.values[0]);
@@ -251,11 +255,13 @@
                     $('.product-grid').isotope({
                         filter: function () {
                             var priceRange = $('#amount').val();
-                            var priceMin = parseFloat(priceRange.split('-')[0].replace('đ', ''));
-                            var priceMax = parseFloat(priceRange.split('-')[1].replace('đ', ''));
-                            var itemPrice = $(this).find('.in_product_price').clone().children().remove().end().text();
+                            var priceMin = parseFloat(priceRange.split('-')[0].replace('đ', '').trim());
+                            var priceMax = parseFloat(priceRange.split('-')[1].replace('đ', '').trim());
+                            var itemPrice = parseFloat($(this).find('.in_product_price').text().replace('đ', '').trim());
 
-                            return (itemPrice > priceMin) && (itemPrice < priceMax);
+                            return (itemPrice >= priceMin) && (itemPrice <= priceMax);
+                        },
+
                         },
                         animationOptions: {
                             duration: 750,
