--- a/BanHang/Areas/Admin/Views/Sale/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Sale/Index.cshtml
@@ -112,7 +112,7 @@
             </table>
             <div class="col-3 text-left">
                 <input type="button" value="Thêm" id="btn btn-sm btn-primary btnclick" class="btn btn-default btnclick" onclick="AddSale();" />
-                <a href="#" onclick="Api();" class="btn btn-success">Call API</a> 
+                @*<a href="#" onclick="Api();" class="btn btn-success">Call API</a>*@ 
             </div>
 
         </div>
