--- a/BanHang/Views/Account/ConfirmEmail.cshtml
+++ b/BanHang/Views/Account/ConfirmEmail.cshtml
@@ -9,7 +9,7 @@
 
     <div>
         <p>
-            Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            Kiểm tra email của bạn @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
         </p>
     </div>
 </div>
