--- a/BanHang/Views/Account/ForgotPassword.cshtml
+++ b/BanHang/Views/Account/ForgotPassword.cshtml
@@ -6,12 +6,12 @@
 }
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <div style="margin-top: 200px; margin-left: 200px; width: 50%; position: relative;">
-    <h2>@ViewBag.Title.</h2>
+    <h2>Quên mật khẩu</h2>
 
     @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
-        <h4>Enter your email.</h4>
+        <h4>Nhập email của bạn</h4>
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div class="form-group">
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Email Link" />
+                <input type="submit" class="btn btn-default" value="Gửi Mail" />
             </div>
         </div>
     }
