--- a/BanHang/Views/Account/Login.cshtml
+++ b/BanHang/Views/Account/Login.cshtml
@@ -7,28 +7,28 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-xA0NIEBcZVKqMHUwYMgRnMtwLyHiJj5M2OGmiqXbXQlRJDDN8q7gAxoN+b9a9kDM" crossorigin="anonymous">
 <div class="container" style="margin-top:160px">
     <hr />
-    <h2>@ViewBag.Title.</h2>
+    <h2>Mời bạn đăng nhập để mua hàng</h2>
     <div class="row">
         <div class="col-md-8">
             <section id="loginForm">
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-                    <h4>Use a local account to log in.</h4>
+                    <h4>Đăng nhập để nhận nhiều ưu đãi.</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+                       <label style=" padding-right: 15px; padding-left: 15px;">Tài khoản</label>
                         <div class="col-md-10">
                             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                        <label style=" padding-right: 15px; padding-left: 15px;">Mật khẩu</label>
                         <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
-                                <input type="button" class="btnShow" value="Show" style="display:inline" />
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
+                            <a href="#" type="button" class="btnShow" value="Show" style="display:inline">show</a>
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -36,22 +36,27 @@
                         <div class="col-md-offset-2 col-md-10">
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
+                                <label>Nhớ mật khẩu</label>
                             </div>
                         </div>
                     </div>
                     <div class="button">
                         <div class="col-md-offset-2 col-md-10">
-                            <input style="padding-right: 0; cursor: pointer;" type="submit" value="Log in" class="btn btn-default" />
+                            <input style="padding-right: 0; cursor: pointer;" type="submit" value="Đăng nhập" class="btn btn-default" />
                         </div>
                     </div>
-                    <p>
-                        @Html.ActionLink("Register as a new user", "Register")
-                    </p>
-                    //Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>
+                    <div class="col-ls-5">
+                        <div>
+                            @Html.ActionLink("Đăng ký", "Register")
+                        </div>
+                            <div style="margin-top:-23px;margin-left:75px">
+                                 @Html.ActionLink("Quên mật khẩu", "ForgotPassword")
+                            </div>
+                           
+                        
+                      
+                            
+                    </div>
                 }
             </section>
         </div>
