--- a/BanHang/Views/Account/ResetPassword.cshtml
+++ b/BanHang/Views/Account/ResetPassword.cshtml
@@ -2,47 +2,48 @@
 @{
     ViewBag.Title = "Reset password";
 }
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+<div style="margin-top:140px;width:2000px;margin-left:450px">
+    <h2>Đổi mật khẩu.</h2>
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+    @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h4>Tạo lại mật khẩu.</h4>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Code)
+        <div class="form-group">
+            <label style="position: relative; width: 100%; min-height: 1px; padding-right: 15px; padding-left: 15px;">Tài khoản</label>
+            <div class=" col-md-5">
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class=" col-md-5">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="form-group">
+            <label style="position: relative; width: 100%; min-height: 1px; padding-right: 15px; padding-left: 15px;">Mật khẩu</label>
+            <div class=" col-md-5">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="form-group">
+            <label style="position: relative; width: 100%; min-height: 1px; padding-right: 15px; padding-left: 15px;">Xác nhận mật khẩu</label>
+            <div class=" col-md-5">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+        <div class="form-group">
+            <div class="col-md-offset-2  col-md-5">
+                <input type="submit" class="btn btn-default" value="Xác nhận" />
+            </div>
         </div>
-    </div>
-}
-
+    }
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
