--- a/BanHang/Views/AddToCart/CheckOutSuccess.cshtml
+++ b/BanHang/Views/AddToCart/CheckOutSuccess.cshtml
@@ -15,9 +15,7 @@
 
                 <div class="breadcrumbs d-flex flex-row align-items-center">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        
-                        <li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Single Product</a></li>
+                        <li><a href="/Home/Index">Trở lại trang chủ</a></li>
                     </ul>
                 </div>
 
