--- a/BanHang/Views/Menu/_MenuArrivals.cshtml
+++ b/BanHang/Views/Menu/_MenuArrivals.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<BanHang.Models.EF.Product>
-    <style>
-        .product {
-            width: 100%;
-            height: 250px;
-            border: solid 5px #e9e9e9;
-        }
-    </style>
+<style>
+    .product {
+        width: 100%;
+        height: 250px;
+        border: solid 5px #e9e9e9;
+    }
+</style>
+
 @if (Model != null && Model.Any())
 {
+    <hr style=" width: 800px; margin-left: 615px; margin-top: 1rem; margin-bottom: -3rem; border: 0; border-top: 5px solid rgb(228 91 15 / 50%);">
     <div class="row">
         <div class="col text-center">
             <div class="section_title new_arrivals_title">
